--- a/i3status.conf
+++ b/i3status.conf
@@ -8,7 +8,10 @@
 
 general {
         colors = true
-        interval = 5
+        interval = 2
+	color_good      = "#88b090"
+        color_degraded  = "#ccdc90"
+        color_bad       = "#e89393"
 }
 
 order += "ipv6"
@@ -16,6 +19,7 @@ order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "volume master"
+order += "cpu_temperature 0"
 order += "battery all"
 order += "load"
 order += "tztime local"
@@ -23,6 +27,11 @@ order += "tztime local"
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
+}
+
+cpu_temperature 0 {
+        format = "T: %degrees °C"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
 }
 
 ethernet _first_ {
